# jpparse

./: .gitignore  LICENSE  README.md  analysis.json  pyproject.toml  scratch.py
data/: index.json
data/scripts/: leyline1.txt  leyline2.txt  leyline3.txt
jpparse/: __init__.py
jpparse/parsing/: __init__.py  parsing.py
jpparse/types/: __init__.py  fugashi_wrap.py  scripts.py  text.py
tests/: test_core.py
