[tool.poetry]
name = "jpparse"
version = "0.1.0"
description = "A japanese language parsing tool for measuring unique kanji, vocab, and grammar"
authors = ["Trevor Wieland <trevor_wieland@mac.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fugashi = "^1.3.2"
pydantic = "^2.8.2"
unidic = {version = "^1.1.0", optional = true}
unidic-lite = {version = "^1.0.8", optional = true}

[tool.poetry.extras]
full = ["unidic"]
lite = ["unidic-lite"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"